Fix banner spacing.

--- a/src/assets/css/firebrand/responsive.scss
+++ b/src/assets/css/firebrand/responsive.scss
@@ -18,7 +18,7 @@
     .figure-caption {
         position: absolute;
         bottom: 6px;
-        width: 25rem;
+        width: 35rem;
         padding: 1rem 2rem;
         text-align: center;
     }
