--- a/src/assets/css/firebrand/theme.scss
+++ b/src/assets/css/firebrand/theme.scss
@@ -76,7 +76,7 @@ footer a:hover {
 .figure-caption {
   position: absolute;
   bottom: 0;
-  width: 25rem; /* TODO: Responsive plz! */
+  width: 35rem; /* TODO: Responsive plz! */
   padding: 1rem 2rem;
 }
 
